<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/laout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvfirstname"
        android:id="@+id/firstname" />
    <EditText
    android:id="@+id/etfirstname"
    android:layout_width="206dp"
    android:layout_height="wrap_content"
    android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvlastname"
        android:id="@+id/lastname" />


     <EditText
            android:id="@+id/etlastname"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvemail"
        android:id="@+id/email" />
    <EditText
        android:id="@+id/etemail"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/password" />

    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/etpassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnlogin"
        android:id="@+id/btnlogin"
        android:layout_gravity="right" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnsubmit"
        android:id="@+id/btnsubmit" />

</LinearLayout>
